--- a/index.html
+++ b/index.html
@@ -1,28 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/style.css" />
+    <!-- Bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+
     <title>TeamDev8</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <img class="logo" src="img/logo/logo.png"/>
-    <nav>
+      <img class="logo" src="img/logo/logo.png" />
+
+      <nav class="navbar">
+        <!-- Tuve que sustituir los divs del nav por listas para poder aplicar estilos bootstrap -->
+        <ul class="nav nav-underline">
+          <li class="nav-item active">
+            <a class="nav-link" aria-current="page" href="#"> Inicio </a>
+          </li>
+          <li class="nav-item"><a class="nav-link">Proyectos</a></li>
+          <li class="nav-item">
+            <a class="nav-link">Nuestro Equipo</a>
+          </li>
+        </ul>
+      </nav>
+      <!-- <nav>
         <div class="menu-option active">
-            <a href="#">Inicio</a>
+          <a href="#">Inicio</a>
         </div>
-        <div class="menu-option"> <!-- Este lo pueden editar -->
-            <a href="#">Option A</a>
+        <div class="menu-option">
+          <a href="#">Option A</a>
         </div>
-        <div class="menu-option"> <!-- Este lo pueden editar -->
-            <a href="#">Option B</a>
+        <div class="menu-option">
+          <a href="#">Option B</a>
         </div>
-        <div class="menu-option"> <!-- Este lo pueden editar -->
-            <a href="#">Option C</a>
+        <div class="menu-option">
+          <a href="#">Option C</a>
         </div>
-    </nav>
+      </nav> -->
     </header>
-</body>
+  </body>
 </html>
