--- a/index.html
+++ b/index.html
@@ -19,31 +19,35 @@
       <img class="logo" src="img/logo/logo.png" />
 
       <nav class="navbar">
-        <!-- Tuve que sustituir los divs del nav por listas para poder aplicar estilos bootstrap -->
         <ul class="nav nav-underline">
           <li class="nav-item active">
-            <a class="nav-link" aria-current="page" href="#"> Inicio </a>
+            <a class="nav-link" aria-current="page" href="#"> Inicio </a> <!--Organice las lineas-->
           </li>
-          <li class="nav-item"><a class="nav-link">Proyectos</a></li>
+          <li class="nav-item">
+            <a class="nav-link">Proyectos</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link">Nuestro Equipo</a>
           </li>
         </ul>
       </nav>
-      <!-- <nav>
-        <div class="menu-option active">
-          <a href="#">Inicio</a>
-        </div>
-        <div class="menu-option">
-          <a href="#">Option A</a>
-        </div>
-        <div class="menu-option">
-          <a href="#">Option B</a>
-        </div>
-        <div class="menu-option">
-          <a href="#">Option C</a>
-        </div>
-      </nav> -->
     </header>
+    <main class="present">
+      <div class="present-b">
+          <!-- Contenedor principal de presentación -->
+          <div class="contenido">
+              <h1>TeamDev8</h1>
+              <p>
+                  Bienvenidos a TemaDev8, un equipo apasionado de programadores dedicados a transformar ideas innovadoras en soluciones tecnológicas de vanguardia. Nuestro equipo está compuesto por expertos en diversas disciplinas de desarrollo, desde diseño de interfaces hasta ingeniería de software y análisis de datos.
+              </p>
+              <div class="present-bottom">
+                  <a href="#">Más sobre TeamDev8</a>
+              </div>
+          </div>
+          <figure>
+              <img src="img/team/Teamgroup.jpg" alt="Equipo de TeamDev8">
+          </figure>
+      </div>
+  </main>
   </body>
 </html>
