--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/style.css" />
+     <!--  Font Awesome -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -49,5 +51,77 @@
           </figure>
       </div>
   </main>
+
+  <!-- Codigo Richeyla -->
+  <h1 class="display-5">Nuestro Equito</h1>
+
+  <div class="container my-5">
+    <div class="row g-4">
+        <div class="col-md-3">
+            <div class="stat-card bg-light">
+              <div class="icon text-primary"><i class="fas fa-user-tie"></i></div>
+                <h5>Richeyla F.</h5>
+                <a href="">Ver Proyectos</a>
+            </div>
+        </div>
+        <div class="col-md-3">
+          <div class="stat-card bg-light">
+            <div class="icon text-primary"><i class="fas fa-user-tie"></i></div>
+              <h5>Demas Estudiantes</h5>
+              <a href="">Ver Proyectos</a>
+          </div>
+      </div>
+      <div class="col-md-3">
+        <div class="stat-card bg-light">
+          <div class="icon text-primary"><i class="fas fa-user-tie"></i></div>
+            <h5>Demas Estudiantes</h5>
+            <a href="">Ver Proyectos</a>
+        </div>
+    </div>
+    <div class="col-md-3">
+      <div class="stat-card bg-light">
+        <div class="icon text-primary"><i class="fas fa-user-tie"></i></div>
+          <h5>Demas Estudiantes</h5>
+          <a href="">Ver Proyectos</a>
+      </div>
+    </div>
+  </div>
+  </div>
+
+<div class="container my-5">
+  <div class="row g-4">
+      <div class="col-md-3">
+          <div class="stat-card bg-light">
+            <div class="icon text-primary"><i class="fas fa-user-tie"></i></div>
+              <h5>Demas Estudiantes</h5>
+              <a href="">Ver Proyectos</a>
+          </div>
+      </div>
+      <div class="col-md-3">
+        <div class="stat-card bg-light">
+          <div class="icon text-primary"><i class="fas fa-user-tie"></i></div>
+            <h5>Demas Estudiantes</h5>
+            <a href="">Ver Proyectos</a>
+        </div>
+    </div>
+    <div class="col-md-3">
+      <div class="stat-card bg-light">
+        <div class="icon text-primary"><i class="fas fa-user-tie"></i></div>
+          <h5>Demas Estudiantes</h5>
+          <a href="">Ver Proyectos</a>
+      </div>
+  </div>
+  <div class="col-md-3">
+    <div class="stat-card bg-light">
+      <div class="icon text-primary"><i class="fas fa-user-tie"></i></div>
+        <h5>Demas Estudiantes</h5>
+        <a href="">Ver Proyectos</a>
+    </div>
+  </div>
+</div>
+</div>
+<!-- Fin Codigo Richeyla -->
+
+
   </body>
 </html>
